deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapers
  labels:
    app: scrapers
spec:
  ports:
  - name: scrapers
    port: 8080
    targetPort: 80
  selector:
    app: scrapers
